Les bases de code des noms de pays en deux et trois lettres

--- a/Création base banque mondiale/creation_database_worldbank.ipynb
+++ b/Création base banque mondiale/creation_database_worldbank.ipynb
@@ -31,12 +31,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On commence par importer les modules nécessaires, et on crée quelques foncions qui vont nous aider à manipuler les dataframe en jonglant entre les codes et les noms des pays"
+    "On commence par importer les modules nécessaires, et on crée quelques fonctions qui vont nous aider à manipuler les dataframe en jonglant entre les codes et les noms des pays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,6 +1695,81 @@
    "outputs": [],
    "source": [
     "df1.to_csv('C:/Users/Titouan/Desktop/WB_data2.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Récupération des bases de codes des noms de pays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import urllib#pour récupérer les données\n",
+    "import bs4#pour rendre lisibles les données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Scrap (url):\n",
+    "    req = urllib.request.Request(url)\n",
+    "    html = urllib.request.urlopen(req).read()\n",
+    "    page = bs4.BeautifulSoup(html, \"lxml\")\n",
+    "    return page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ToDf (table) :\n",
+    "    Listgrossiere=pd.read_html(str(table))#on transforme le tableau en liste de dataframes\n",
+    "    listeDf=Listgrossiere[0]#on récupère le dataframe\n",
+    "    return listeDf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "page=Scrap('https://laendercode.net/fr/2-letter-list.html')\n",
+    "table = page.find('table')\n",
+    "liste2=ToDf(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "page=Scrap('https://laendercode.net/fr/3-letter-list.html')\n",
+    "table = page.find('table')\n",
+    "liste3=ToDf(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste2.to_csv(r'C:\\Users\\sylva\\Desktop\\git\\Statap_cice\\liste_pays_2lettres.csv')\n",
+    "liste3.to_csv(r'C:\\Users\\sylva\\Desktop\\git\\Statap_cice\\liste_pays_3lettres.csv')"
    ]
   },
   {
