--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -18,22 +18,35 @@ description=read.csv("Variable-Description.csv")
 autre_pays=read.csv("WB_data2.csv")
 pays2lettres=read.csv('liste_pays_2lettres.csv')
 pays3lettres=read.csv('liste_pays_3lettres.csv')
+codepays=read.csv("codes_pays.csv")
 ```
 #les lignes avec des données
 ```{r}
 lignedata=c('X1995', 'X1996', 'X1997', 'X1998', 'X1999', 'X2000', 'X2001', 'X2002', 'X2003', 'X2004', 'X2005', 'X2006', 'X2007', 'X2008', 'X2009', 'X2010', 'X2011', 'X2012', 'X2013', 'X2014', 'X2015', 'X2016', 'X2017')#les colonnes de données 
 date=seq(2000, 2017)
 ```
+
+
+```{r}
+codepays
+```
+```{r}
+codepays=codepays %>% rename( country=ISO2.digit.Alpha)
+comptebis=left_join(compte,codepays,by="country")
+compte=comptebis%>% rename(country3L=ISO3.digit.Alpha)
+compte
+```
+
 #fonction qui permet de récupérer des dataframes utilisables sur une donnée
 ```{r}
 melt_ada <- function(vari,codei,basei=compte){
-tableau=subset(basei,(var==vari)& code==codei)[c("country", lignedata,"var")]
+tableau=subset(basei,(var==vari)& code==codei)[c("country3L", lignedata,"var")]
 indligneNA <- which(is.na(tableau),arr.ind=TRUE)[,1]
 tableau=tableau[-indligneNA,]
-df.melted <- melt(tableau,id=c('country','var'))
+df.melted <- melt(tableau,id=c('country3L','var'))
 df.melted$temps=as.numeric(str_sub(df.melted$variable, 2, 5))
-df.melted$country=as.character(df.melted$country)
-return (df.melted[-3])
+df.melted$country=as.character(df.melted$country3L)
+return (df.melted[-3]%>% select(-country3L))
 }
 melt_ada('EMP','TOT')
 ```
@@ -47,29 +60,33 @@ df.melted$country=as.character(df.melted$country)
 
 ```
 
+```{r}
+df.melted=df.melted%>% rename(VA=value.x,Emploi=value.y)
+```
+
 #le calcul du salaire réel horaire
 ```{r}
 df.W=inner_join(melt_ada('COMP','TOT'), melt_ada("VA_PI",'TOT'),by=c("country","temps"))
+df.W
 df.W=inner_join(df.W, melt_ada("H_EMPE",'TOT'),by=c("country","temps"))
 df.W$index=c(1:length((unique(df.W$country))))
 df.W$country=as.character(df.W$country)
 df.W$W=(df.W$value.x*100/df.W$value.y)*1000/df.W$value#le nombre d'heures travaillées est en milliers
-df.W$value.x=as.numeric(df.W$W)
+df.W$VA=as.numeric(df.W$W)
 df.W=df.W[,c('country','W', 'temps')]
 df.W
 ```
 
-La fusion des bases : PIB, emploi, salaire réel horaire
+#La fusion des bases : PIB, emploi, salaire réel horaire
 ```{r}
 df.melted2=inner_join(df.melted, df.W, by=c("country","temps"))
 df.melted2$index=c(1:length((unique(df.melted2$country))))
 df.melted2
 ```
-
 ```{r}
 df.scale<-df.melted2
-df.scale$value.y<-scale(df.melted2$value.y)
-df.scale$value.x<-scale(df.melted2$value.x)
+df.scale$Emploi<-scale(df.melted2$Emploi)
+df.scale$VA<-scale(df.melted2$VA)
 df.scale$W<-scale(df.melted2$W)
 ```
 
@@ -81,26 +98,49 @@ df.melted_i$index=c(1:length((unique(df.melted_i$country))))
 df.melted_i
 #PROBLEME : les valeurs manquantes font perdre 10 pays
 ```
+
+
+#On enleve les colonne mnt innutile varx et vay
 ```{r}
-tableau_sup=subset(autre_pays,Simple.Indicator=='pop')[c("Country.Code",lignedata)]
-tableau_sup$Country.Code=substring(tableau_sup$Country.Code,1,2)
-substring(tableau_sup$Country.Code,1,2)
-rownames(tableau_sup)<-tableau_sup[,1]
-t(tableau_sup[,-1])[paysbis]
+df.melted2=df.melted2 %>% select(-c(var.x,var.y))
 ```
+
+#Intégration de la population
+```{r}
+df.melted2=df.melted2[c("country",'temps','index','VA','Emploi','W')]
+dfpop=subset(autre_pays,Simple.Indicator=="pop")[c("Country.Code","Simple.Indicator",lignedata)]
+rownames(dfpop)<-dfpop[,1]
+head(dfpop[-c(1,2)])
+```
+
+```{r}
+df_pop<-t(dfpop[-c(1,2)])
+df <- data.frame(x=1995:2017, data.frame(df_pop))
+df.pop <- melt(df, id="x")%>%rename(country=variable, temps=x,pop=value)
+```
+
+
+```{r}
+df.melted2=left_join(df.melted2,df.pop)
+```
+```{r}
+df.melted2$VA_pop=df.melted2$VA/df.melted2$pop*1000000
+df.melted2
+```
+
 
 
 ###La fonction de base
 ```{r}
  dataprep.out=Synth::dataprep(foo=df.melted2,
-                predictors = c("value.x","value.y","W"), #Les variables utilisées en contrôle
+                predictors = c("VA_pop","Emploi","W"), #Les variables utilisées en contrôle
                 predictors.op = "mean", #La manière dont on les prend en compte
                 time.predictors.prior = 2012, #période pré-traitement
-                dependent="value.x", #variable d'intérêt
+                dependent="VA", #variable d'intérêt
                 unit.variable = "index", #colonne avec les index des pays
                 unit.names.variable="country", #nom des pays
-                treatment.identifier = 12, # n° de l'unité traitée
-                controls.identifier = c(1:11,13:24), #n° des unités de contrôles
+                treatment.identifier = 11, # n° de l'unité traitée
+                controls.identifier = c(1:10,12:22), #n° des unités de contrôles
                 time.variable = 'temps', #colonne où se trouve la date
                 time.optimize.ssr = 2000:2012, #période de maximisation
                 time.plot=1995:2017, ) #période tracée sur le graphique
@@ -161,7 +201,7 @@ opti=auglag(x0, f, hin=n, heq=q)#fonction d'optimisation sur toute la période
 opti$par=matrix(opti$par, ncol=1)}
 ```
 ```{r}
-optix=quiet(calculpoids(df.melted, 'value.x'))
+optix=quiet(calculpoids(df.melted, 'VA'))
 ```
 
 
@@ -172,24 +212,24 @@ special=list()
 dataprep.out=Synth::dataprep(foo=df.melted,
                 predictors.op = "mean", #La manière dont on les prend en compte
                 time.predictors.prior = 2012, #période pré-traitement
-                special.predictors = list(list("value.x",1999,"mean"),
-                                           list("value.x",2001,"mean"),
-                                           list("value.x",2003,"mean"),
-                                           list("value.x",2005,"mean"),
-                                           list("value.x",2007,"mean"),
-                                           list("value.x",2009,"mean"),
-                                           list("value.y",1999,"mean"),
-                                           list("value.y",2001,"mean"),
-                                           list("value.y",2003,"mean"),
-                                           list("value.y",2005,"mean"),
-                                           list("value.y",2007,"mean"),
-                                           list("value.y",2009,"mean")
+                special.predictors = list(list("VA",1999,"mean"),
+                                           list("VA",2001,"mean"),
+                                           list("VA",2003,"mean"),
+                                           list("VA",2005,"mean"),
+                                           list("VA",2007,"mean"),
+                                           list("VA",2009,"mean"),
+                                           list("Emploi",1999,"mean"),
+                                           list("Emploi",2001,"mean"),
+                                           list("Emploi",2003,"mean"),
+                                           list("Emploi",2005,"mean"),
+                                           list("Emploi",2007,"mean"),
+                                           list("Emploi",2009,"mean")
                                            ),
-                dependent="value.x", #variable d'intérêt
+                dependent="VA", #variable d'intérêt
                 unit.variable = "index", #colonne avec les index des pays
                 unit.names.variable="country", #nom des pays
-                treatment.identifier = 12, # n° de l'unité traitée
-                controls.identifier = c(1:11,13:26), #n° des unités de contrôles
+                treatment.identifier = 11, # n° de l'unité traitée
+                controls.identifier = c(1:10,12:22), #n° des unités de contrôles
                 time.variable = 'temps', #colonne où se trouve la date
                 time.optimize.ssr = 1999:2012, #période de maximisation
                 time.plot=1995:2017) #période tracée sur le graphique
@@ -201,14 +241,14 @@ Ylab = "PIB", Xlab = "year", Legend = c("France", "synthetic France"), Legend.po
 
 #Version sans les différentes dates
 dataprep.out=Synth::dataprep(foo=df.melted,
-                predictors = c("value.x","value.y"), #Les variables utilisées en contrôle
+                predictors = c("VA","Emploi"), #Les variables utilisées en contrôle
                 predictors.op = "mean", #La manière dont on les prend en compte
                 time.predictors.prior = 2012, #période pré-traitement
-                dependent="value.x", #variable d'intérêt
+                dependent="VA", #variable d'intérêt
                 unit.variable = "index", #colonne avec les index des pays
                 unit.names.variable="country", #nom des pays
-                treatment.identifier = 12, # n° de l'unité traitée
-                controls.identifier = c(1:11,13:26), #n° des unités de contrôles
+                treatment.identifier = 11, # n° de l'unité traitée
+                controls.identifier = c(1:10,12:22), #n° des unités de contrôles
                 time.variable = 'temps', #colonne où se trouve la date
                 time.optimize.ssr = 1999:2012, #période de maximisation
                 time.plot=1995:2017) #période tracée sur le graphique
@@ -231,19 +271,19 @@ synth.tables$tab.w
 ```
 ###Pour l'emploi
 ```{r}
-optiy=quiet(calculpoids(df.melted, 'value.y'))
+optiy=quiet(calculpoids(df.melted, 'Emploi'))
 ```
 
 ```{r}
 dataprep.out=Synth::dataprep(foo=df.melted,
-                predictors = c("value.x","value.y"), #Les variables utilisées en contrôle
+                predictors = c("VA","Emploi"), #Les variables utilisées en contrôle
                 predictors.op = "mean", #La manière dont on les prend en compte
                 time.predictors.prior = 2012, #période pré-traitement
-                dependent="value.y", #variable d'intérêt
+                dependent="Emploi", #variable d'intérêt
                 unit.variable = "index", #colonne avec les index des pays
                 unit.names.variable="country", #nom des pays
-                treatment.identifier = 12, # n° de l'unité traitée
-                controls.identifier = c(1:11,13:26), #n° des unités de contrôles
+                treatment.identifier = 11, # n° de l'unité traitée
+                controls.identifier = c(1:10,12:22), #n° des unités de contrôles
                 time.variable = 'temps', #colonne où se trouve la date
                 time.optimize.ssr = 2000:2012, #période de maximisation
                 time.plot=1995:2017) #période tracée sur le graphique
@@ -256,24 +296,24 @@ Ylab = "Emploi", Xlab = "year", Legend = c("France", "synthetic France"), Legend
 dataprep.out=Synth::dataprep(foo=df.melted2,
                 predictors.op = "mean", #La manière dont on les prend en compte
                 time.predictors.prior = 2012, #période pré-traitement
-                special.predictors = list(list("value.x",1999,"mean"),
-                                           list("value.x",2001,"mean"),
-                                           list("value.x",2003,"mean"),
-                                           list("value.x",2005,"mean"),
-                                           list("value.x",2007,"mean"),
-                                           list("value.x",2009,"mean"),
-                                           list("value.y",1999,"mean"),
-                                           list("value.y",2001,"mean"),
-                                           list("value.y",2003,"mean"),
-                                           list("value.y",2005,"mean"),
-                                           list("value.y",2007,"mean"),
-                                           list("value.y",2009,"mean")
+                special.predictors = list(list("VA",1999,"mean"),
+                                           list("VA",2001,"mean"),
+                                           list("VA",2003,"mean"),
+                                           list("VA",2005,"mean"),
+                                           list("VA",2007,"mean"),
+                                           list("VA",2009,"mean"),
+                                           list("Emploi",1999,"mean"),
+                                           list("Emploi",2001,"mean"),
+                                           list("Emploi",2003,"mean"),
+                                           list("Emploi",2005,"mean"),
+                                           list("Emploi",2007,"mean"),
+                                           list("Emploi",2009,"mean")
                                            ),
-                dependent="value.y", #variable d'intérêt
+                dependent="Emploi", #variable d'intérêt
                 unit.variable = "index", #colonne avec les index des pays
                 unit.names.variable="country", #nom des pays
-                treatment.identifier = 12, # n° de l'unité traitée
-                controls.identifier = c(1:11,13:24), #n° des unités de contrôles
+                treatment.identifier = 11, # n° de l'unité traitée
+                controls.identifier = c(1:10,12:22), #n° des unités de contrôles
                 time.variable = 'temps', #colonne où se trouve la date
                 time.optimize.ssr = 1999:2012, #période de maximisation
                 time.plot=1995:2017) #période tracée sur le graphique
@@ -360,7 +400,7 @@ synth.out$solution.w=opti#on remplace les poids par ceux calculés
 Synth::path.plot(synth.res = synth.out, dataprep.res = dataprep.out,
 Ylab = "PIB", Xlab = "year", Legend = c("France", "synthetic France"), Legend.position = "bottomright")
 }
-tripleSynth(liste_value=c("value.x", "value.y", "W"), df.melted2, pays='FR')
+tripleSynth(liste_value=c("VA", "Emploi", "W"), df.melted2, pays='FR')
 ```
 
 ```{r}
@@ -369,18 +409,18 @@ df.melted_i
 
 ```{r}
 dataprep.out=Synth::dataprep(foo=df.melted_i,
-                special.predictors = list(list("value.x",1999,"mean"),
-                                           list("value.x",2001,"mean"),
-                                           list("value.x",2003,"mean"),
-                                           list("value.x",2005,"mean"),
-                                           list("value.x",2007,"mean"),
-                                           list("value.x",2009,"mean"),
-                                           list("value.y",1999,"mean"),
-                                           list("value.y",2001,"mean"),
-                                           list("value.y",2003,"mean"),
-                                           list("value.y",2005,"mean"),
-                                           list("value.y",2007,"mean"),
-                                           list("value.y",2009,"mean"),
+                special.predictors = list(list("VA",1999,"mean"),
+                                           list("VA",2001,"mean"),
+                                           list("VA",2003,"mean"),
+                                           list("VA",2005,"mean"),
+                                           list("VA",2007,"mean"),
+                                           list("VA",2009,"mean"),
+                                           list("Emploi",1999,"mean"),
+                                           list("Emploi",2001,"mean"),
+                                           list("Emploi",2003,"mean"),
+                                           list("Emploi",2005,"mean"),
+                                           list("Emploi",2007,"mean"),
+                                           list("Emploi",2009,"mean"),
                                            list("value",1999,"mean"),
                                            list("value",2001,"mean"),
                                            list("value",2003,"mean"),
